<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.taringarovers.android.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_shop"
        android:name="com.taringarovers.android.ui.shop.ShopFragment"
        android:label="@string/title_shop"
        tools:layout="@layout/fragment_shop" />

    <fragment
        android:id="@+id/navigation_my_account"
        android:name="com.taringarovers.android.ui.account.AccountFragment"
        android:label="@string/title_my_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_teams"
        android:name="com.taringarovers.android.ui.teams.TeamsFragment"
        android:label="@string/title_teams"
        tools:layout="@layout/fragment_teams" />

    <fragment
        android:id="@+id/navigation_about_tiranga"
        android:name="com.taringarovers.android.ui.aboutus.AboutUsFragment"
        android:label="@string/title_about_us"
        tools:layout="@layout/about_us_fragment" />
</navigation>